# push_swap

./: .gdbinit  .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  Makefile.cmake  README.md  README211323.md  cmake_install.cmake  push_swap  push_swap.c  push_swap.h  push_swap_test_linux (copy).sh  push_swap_test_linux.sh  traces.txt  valgrind_output.txt
1/: CTestTestfile.cmake  Makefile  pipex  push_swap
1/includes/: push_swap.h
1/libs/ft_printf/: ft_print_str.c
1/libs/libft/: Makefile  ft_atol.c  ft_memcpy.c  ft_memmove.c  ft_split.c
1/src/: push_swap.c
1/test/: CTestTestfile.cmake  cmake_install.cmake
entrega/: .gitignore  .nfs00000000047b0ff10000031c  Makefile  checker  push_swap  valgrind_output.txt
entrega/inc/: push_swap.h
entrega/libs/ft_printf/: ft_print_unsig.c
entrega/libs/libft/: ft_calloc.c  ft_numlen.c  ft_putchar.c  ft_strarray_len.c  ft_strchr.c  ft_strlen.c  ft_strncmp.c  ft_strnstr.c  ft_substr.c  ft_uitoa_base.c  ft_unumlen_base.c  get_next_line.c
entrega/src/: exit_and_free.c  populate_stack_a.c  push.c  push_swap.c  sort.c  sort_utils.c  stack_utils.c
entrega/src/checker/: checker.c
entrega/tester/: test
entrega/tester/leaks/: 000save_100_random_values,_Test_#1_valgrind_output.txt  Between_0_and_3_random_values_valgrind_output.txt  Single_value_(42)_valgrind_output.txt
entrega_opt/: .gitignore  Makefile  checker  push_swap  valgrind_output.txt
entrega_opt/inc/: push_swap.h
entrega_opt/libs/ft_printf/: ft_print_nbr.c  ft_printf.h
entrega_opt/libs/libft/: Makefile  ft_atol.c  ft_itoa.c  ft_striteri.c  ft_toupper.c  libft.h  program
entrega_opt/src/: exit_and_free.c  prepare_stack_b.c  push_swap.c  reverse_rotate.c  sort.c
entrega_opt/src/checker/: checker.c
includes/: push_swap.h
libs/ft_printf/: ft_print_hex.c  ft_print_ptr.c  ft_printf.h  program
libs/libft/: ft_itoa_base.c  ft_memchr.c  ft_memcmp.c  ft_memset.c  ft_numlen_base.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_string_toupper.c  ft_strjoin.c  libft.h
push_swap copy/: Makefile  push_swap  valgrind_output.txt
push_swap copy/srcs/: push_swap.c
push_swap copy/tester/: Makefile  output.txt  test  test.sh
push_swap copy/tester/leaks/: 000save_100_random_values,_Test_#1_valgrind_output.txt  100_random_values,_Test_#1_valgrind_output.txt  (+21 more)
push_swapcopy/: Makefile  READ.md  README.md  push_swap  traces.txt  valgrind_output.txt
push_swapcopy/inc/: push_swap.h
push_swapcopy/src/: prepare_stack_a.c  push.c  push_swap.c  reverse_rotate.c  rotate.c  stack_utils.c  swap.c
push_swapcopy/tester/: output.txt  test  test (copy).sh
src/: push_swap.c
test/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  swap_a_test.c
test/Testing/Temporary/: CTestCostData.txt
test/tests/: MainTests.cpp
tester/: test
(+24 files in other folders)
